# libexcelformula

./: .gitignore  readme.md
CMake/: CMakeLists.txt
include/libexcelformula/: libexcelformula.h  libexcelformulaerror.h
src/formula_callback_manager/: excel_formula_callback_manager.cpp  excel_formula_callback_manager.h  i_excel_formula_callback_manager.h  mock_excel_formula_callback_manager.cpp  mock_excel_formula_callback_manager.h
src/formula_evaluator/: excel_formula_evaluator.cpp  excel_formula_evaluator.h  mock_excel_formula_evaluator.cpp  mock_excel_formula_evaluator.h
src/formula_lexer/: excel_formula_lexer.cpp  excel_formula_lexer.h  i_excel_formula_lexer.h  mock_excel_formula_lexer.cpp  mock_excel_formula_lexer.h
src/formula_lexer/tokens/: cell_token.cpp  cell_token.h  close_curly_paren_token.cpp  close_curly_paren_token.h  close_paren_token.cpp  close_paren_token.h  comma_token.cpp  comma_token.h  equal_operation_token.cpp  equal_operation_token.h  excel_function_token.cpp  excel_function_token.h  integer_token.cpp  integer_token.h  open_curly_paren_token.cpp  open_curly_paren_token.h  open_paren_token.cpp  open_paren_token.h
src/formula_parser/: excel_formula_parser.cpp  excel_formula_parser.h  i_excel_formula_parser.h  mock_excel_formula_parser.cpp  mock_excel_formula_parser.h
src/parse_tree_executor/: excel_formula_parse_tree_executor.cpp  excel_formula_parse_tree_executor.h  i_excel_formula_parse_tree_executor.h  mock_excel_formula_parse_tree_executor.cpp  mock_excel_formula_parse_tree_executor.h
src/shared/: excel_formula_parse_tree.cpp  excel_formula_parse_tree.h  excel_formula_parse_tree_node.cpp  excel_formula_parse_tree_node.h  i_excel_formula_parse_tree.h  i_excel_formula_parse_tree_node.h  i_excel_formula_token.h  lexer_error.h  parser_error.h  runtime_error.h  token_types.h
test/: unit_test_driver.cpp
test/CMake/: CMakeLists.txt
test/perf_test/: list_of_perf_test_folders.hpp  perf_test_driver.cpp
test/unit_test/: list_of_ut_folders.hpp  unit_test_driver.cpp
test/unit_test/formula_callback_manager_tests/: formula_callback_manager_uts.hpp  ut_exports.hpp
test/unit_test/formula_evaluator_tests/: formula_evaluator_uts.hpp  ut_exports.hpp
test/unit_test/formula_lexer_tests/: formula_lexer_uts.hpp  ut_exports.hpp
test/unit_test/formula_parser_tests/: formula_parser_uts.hpp  ut_exports.hpp
test/unit_test/parse_tree_executor_tests/: parse_tree_executor_uts.hpp  ut_exports.hpp
